Toute la partie serveur est fini, TODO : afficher le message de tt est ok

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <nav id ="mainNav">
   <ul>
-    <li><a href="index.html">Accueil</a></li>
+    <li><a href="index.php">Accueil</a></li>
     <li><a href="https://www.facebook.com/lpjstdo">Facebook</a></li>
     <li><a href="https://twitter.com/LPJ_StDo">Twitter</a></li>
     <li><a href="about.html">About </a></li>
@@ -22,10 +22,10 @@
 
 <main>
 <div id="wrapper">
-  <section id="logoContainer"> 
-  <img src="logo_LPJ.png.png" alt="Logo LPJ" title="Logo LPJ"/> 
+  <section id="logoContainer">
+  <img src="logo_LPJ.png.png" alt="Logo LPJ" title="Logo LPJ"/>
   </section>
-  
+
   <section id="descriptionContainer">
     <h3 id="titre_description">Libérez vous !</h3>
     <p>Vous voulez déclarer votre flamme mais vous n'osez pas lui dire en face ? Ne vous inquiétez plus ! Le petit journal de saint Dominique est la pour vous aider ! <br>
