--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
   <section id="descriptionContainer">
     <h3 id="titre_description">Libérez vous !</h3>
     <p>Vous voulez déclarer votre flamme mais vous n'osez pas lui dire en face ? Ne vous inquiétez plus ! Le petit journal de saint Dominique est la pour vous aider ! <br>
-    L'équipe du journal a mis en place un site où vous pouvez poster vos messages d'amour anonymement que nous retranscriront dans notre prochain numéro de 12 Février, 2 jours avant la saint Valentin ! Nous vous espérons nombreux à participer à ce projet!</p>
+    L'équipe du journal a mis en place un site où vous pouvez poster vos messages d'amour anonymement que nous retranscrirons dans notre prochain numéro du 12 Février, 2 jours avant la saint Valentin ! Nous vous espérons nombreux à participer à ce projet!</p>
     <p>Le principe est simple, sur la page d'accueil, écrivez votre message et cliquez sur le bouton <em>"Envoyez votre message !", </em>votre message sera sauvegardé sans aucun moyen pour nous de vous identifier. Par la suite, vous aurez le droit de modifier votre message trois fois. Toute tentative de spam est inutile et le messages injurieux seront supprimés sans préavis avec aucune possibilité pour l'auteur d'en écrire un autre. <br>
       /!\ Nous utilisons les cookies dans un but de protection, notez qu'il nous &nbsp;est impossible de vous identifier avec.</p>
     <p>Sur ce à vos claviers ! </p>
